# image-cropping-prodigy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
docs/: README.md  _sidebar.md  background.md  examples.md  getting-started.md  help.md  reference.md
non-coding-work-reports/: 2023-10-04.md
src/opf_image_cropping/: create_jsonl_opf.py  extract_cropped_image.py
tests/: test_create_jsonl_opf.py  test_example.py
